--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web322-app",
   "version": "1.0.0",
-  "description": "Assignment2",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
