--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "Avneet Kaur",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cloudinary": "^1.37.0",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "multer": "^1.4.5-lts.1",
+    "streamifier": "^0.1.1"
   }
 }
